javaFXTest can launch